css/style.css
html,
body {
  height: 100%;
  margin: 0;
  font-family: 'Roboto', sans-serif;
}

#map {
  width: 90vw;
  height: 50vh;
  margin: 0 auto;
  margin-top: 5vh;
}

#data-presentation-container {
  width: 90vw;
  min-height: 40vh;
  margin: 0 auto;
  display:flex;
  flex-direction: column;
  align-items: center;
}

#input-holder{
  width: 90vw;
  height: 5vh;
  display:flex;
  margin-top: 1vh;
}

#data-presentation{
  width: 90vw;
  min-height: 40vh;
  display:flex;
  margin-top: 1vh;
  background-color: #DCDCDC;
  flex-direction: column;
  flex-wrap: wrap;
  /* text-align: center; */
}

#item-info-container {
  max-height:3vw;
  margin-left: 1vw;
}


.info {
  padding: 6px 8px;
  font: 12px/14px Arial, Helvetica, sans-serif;

  background: rgba(255, 255, 255, 0.8);
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
}

.info h4 {
  margin: 0 0 1vmin;
  color: #777;
}

.legend {
  text-align: left;
  line-height: 18px;
  color: #555;
}

.legend i {
  width: 12px;
  height: 12px;
  float: left;
  margin-right: 1vw;
  opacity: 0.7;
}

